# ARC

./: .gitignore  Cargo.toml  README.md  license.txt
doc/: aliases.js  settings.html  source-files.js
doc/approx/: struct.Ulps.html
doc/clicolors_control/: fn.set_colors_enabled.html
doc/colog/: index.html
doc/console/: enum.Attribute.html  fn.measure_text_width.html  fn.pad_str.html  index.html
doc/doc/: search-index.js
doc/generic_array/: struct.GenericArray.html
doc/indicatif/: struct.ProgressBarWrap.html  struct.ProgressStyle.html  trait.ProgressIterator.html
doc/itertools/: enum.Position.html  fn.all.html  fn.diff_with.html  fn.equal.html  fn.repeat_n.html  fn.unfold.html
doc/json5/: index.html
doc/nalgebra/: fn.clamp.html  fn.convert.html  fn.convert_ref.html  fn.convert_unchecked.html  fn.dimension.html  fn.inverse.html  fn.max.html  fn.norm.html  fn.norm_squared.html  fn.partial_lt.html  fn.partial_max.html  fn.partial_sort2.html  fn.sup.html  fn.try_convert_ref.html  fn.try_normalize.html  struct.Id.html  trait.RealField.html
doc/ndarray/: all.html  enum.CowRepr.html  enum.SliceOrIndex.html  fn.Ix2.html  fn.IxDyn.html  fn.arr0.html  fn.arr2.html  fn.arr3.html  fn.indices.html  fn.stack.html  macro.stack.html  struct.Axis.html  struct.Dim.html  struct.ShapeError.html  struct.Slice.html  struct.Zip.html  trait.DataOwned.html  trait.IndexLonger.html  trait.IntoDimension.html  trait.NdFloat.html  trait.RawDataClone.html  trait.ScalarOperand.html  trait.ShapeBuilder.html  type.ArcArray.html  type.Array.html  type.Array4.html  type.ArrayD.html  type.ArrayView.html  type.ArrayView5.html  type.ArrayView6.html  type.ArrayViewD.html  type.ArrayViewMut0.html  type.ArrayViewMut1.html  type.ArrayViewMut3.html  type.Ix0.html  type.Ix5.html  type.Ixs.html
doc/ndarray_stats/: index.html  trait.EntropyExt.html  trait.HistogramExt.html  trait.MaybeNan.html
doc/netcdf/: fn.create.html
doc/netcdf_sys/: constant.MAX_NC_DIMS.html  constant.MAX_NC_VARS.html  constant.NC4_FIRST_ERROR.html  constant.NC_64BIT_OFFSET.html  constant.NC_CHAR.html  constant.NC_CLASSIC_MODEL.html  constant.NC_CLOBBER.html  constant.NC_COMPOUND.html  constant.NC_CONTIGUOUS.html  constant.NC_DISKLESS.html  constant.NC_DOUBLE.html  constant.NC_EAXISTYPE.html  constant.NC_EBADTYPID.html  constant.NC_ECANTREAD.html  constant.NC_ECURL.html  constant.NC_EDAPURL.html  constant.NC_EDAS.html  constant.NC_EDATADDS.html  constant.NC_EINVAL.html  constant.NC_EMAXATTS.html  constant.NC_EMAXVARS.html  constant.NC_ENDIAN_BIG.html  constant.NC_ENDIAN_NATIVE.html  constant.NC_ENOCOMPOUND.html  constant.NC_ENODATA.html  constant.NC_ENOPAR.html  constant.NC_ENOTATT.html  constant.NC_ENOTNC.html  constant.NC_ENOTNC3.html  constant.NC_ENTOOL.html  constant.NC_EPARINIT.html  constant.NC_EPERM.html  constant.NC_ERANGE.html  constant.NC_ESTORAGE.html  constant.NC_ESTRIDE.html  constant.NC_ETRUNC.html  constant.NC_EURL.html  constant.NC_FATAL.html  constant.NC_FILL_UBYTE.html  constant.NC_FILL_UINT.html  (+117 more)
doc/noisy_float/: struct.NoisyFloat.html
doc/num_rational/: index.html
doc/number_prefix/: all.html  trait.Amounts.html  trait.PrefixNames.html
doc/physical_constants/: constant.ALPHA_PARTICLE_MASS.html  constant.ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT.html  constant.ALPHA_PARTICLE_MASS_ENERGY_EQUIVALENT_IN_MEV.html  constant.ALPHA_PARTICLE_PROTON_MASS_RATIO.html  constant.ATOMIC_MASS_CONSTANT_ENERGY_EQUIVALENT_IN_MEV.html  constant.ATOMIC_MASS_UNIT_INVERSE_METER_RELATIONSHIP.html  constant.ATOMIC_UNIT_OF_CURRENT.html  constant.ATOMIC_UNIT_OF_ELECTRIC_FIELD.html  constant.ATOMIC_UNIT_OF_ELECTRIC_FIELD_GRADIENT.html  constant.ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL.html  constant.ATOMIC_UNIT_OF_ENERGY.html  constant.ATOMIC_UNIT_OF_MAG_FLUX_DENSITY.html  constant.BOHR_MAGNETON.html  constant.CHARACTERISTIC_IMPEDANCE_OF_VACUUM.html  constant.CLASSICAL_ELECTRON_RADIUS.html  constant.COMPTON_WAVELENGTH_OVER_2_PI.html  constant.CONVENTIONAL_VALUE_OF_JOSEPHSON_CONSTANT.html  constant.CONVENTIONAL_VALUE_OF_VON_KLITZING_CONSTANT.html  constant.DEUTERON_MAG_MOM.html  constant.DEUTERON_MAG_MOM_TO_BOHR_MAGNETON_RATIO.html  constant.DEUTERON_MOLAR_MASS.html  constant.DEUTERON_RMS_CHARGE_RADIUS.html  constant.ELECTRON_CHARGE_TO_MASS_QUOTIENT.html  constant.ELECTRON_MAG_MOM_ANOMALY.html  constant.ELECTRON_MOLAR_MASS.html  constant.ELECTRON_MUON_MASS_RATIO.html  constant.ELECTRON_TAU_MASS_RATIO.html  constant.ELECTRON_TO_ALPHA_PARTICLE_MASS_RATIO.html  constant.ELECTRON_TO_SHIELDED_HELION_MAG_MOM_RATIO.html  constant.ELECTRON_TO_SHIELDED_PROTON_MAG_MOM_RATIO.html  constant.ELECTRON_VOLT_HERTZ_RELATIONSHIP.html  constant.ELECTRON_VOLT_KELVIN_RELATIONSHIP.html  constant.FARADAY_CONSTANT_FOR_CONVENTIONAL_ELECTRIC_CURRENT.html  constant.FINE_STRUCTURE_CONSTANT.html  constant.HARTREE_ATOMIC_MASS_UNIT_RELATIONSHIP.html  constant.HARTREE_ENERGY_IN_EV.html  constant.HARTREE_KILOGRAM_RELATIONSHIP.html  constant.HELION_MASS_ENERGY_EQUIVALENT.html  constant.HELION_MASS_ENERGY_EQUIVALENT_IN_MEV.html  constant.HELION_MASS_IN_U.html  (+51 more)
doc/rand/: struct.Error.html  trait.RngCore.html  trait.SeedableRng.html
doc/rand_distr/: all.html  enum.ChiSquaredError.html  enum.GammaError.html  enum.TriangularError.html  struct.Bernoulli.html  struct.Binomial.html  struct.DistIter.html  struct.Exp.html  struct.Open01.html  struct.StandardNormal.html  struct.Weibull.html
doc/serde_json/: fn.to_vec.html  fn.to_vec_pretty.html
doc/terminal_size/: fn.terminal_size.html  fn.terminal_size_using_fd.html  index.html  struct.Height.html
doc/termios/: fn.cfsetispeed.html  fn.cfsetospeed.html  fn.tcsetattr.html
docs/: aliases.js  search-index.js  source-files.js
docs/antler/: all.html  constant.COL_WIDTH.html  fn.build_camera.html  fn.build_grid.html  fn.init_dirs.html  fn.load_frame_settings.html  fn.load_parameters.html  fn.load_quality.html  fn.main.html  (+7 more)
legacy/: camera.rs  main.rs  quality.rs  simple_scan.rs
res/: tumour_depth_ave_abs_dens.csv
res/crates/proc/: Cargo.toml
res/crates/proc/src/: json.rs  lib.rs  new.rs
scripts/: doc.sh
src/: lib.rs
(+13550 files in other folders)
